configure named servers for admins, clean up options form, and formatting

--- a/templates/templates-configmap-l40s.yaml
+++ b/templates/templates-configmap-l40s.yaml
@@ -16,6 +16,16 @@ data:
           <p>
             You can launch a total of {{ named_server_limit_per_user + 1 }} server(s).
           </p>
+          {% if named_server_limit_per_user == 0 %}
+            <p>
+              You can launch an unlimited number of servers (admin only). Regular users are limited to 1 server.
+              When adding servers using the 'Add New Server' button, don't add any spaces or capital letters in the server name!
+            </p>
+          {% else %}
+            <p>
+              You can launch a total of {{ named_server_limit_per_user + 1 }} server(s).
+            </p>
+          {% endif %}
           {% set named_spawners = user.all_spawners(include_default=False)|list %}
           <table class="server-table table table-striped">
             <thead>
@@ -115,7 +125,7 @@ data:
                   </td>
                 </tr>
               {% endfor %}
-              {% if named_spawners|length < named_server_limit_per_user %}
+              {% if named_server_limit_per_user == 0 or named_spawners|length < named_server_limit_per_user %}
                 <tr class="home-server-row add-server-row">
                   <td colspan="6">
                     <div class="input-group">
