--- a/templates/templates-configmap-l40s.yaml
+++ b/templates/templates-configmap-l40s.yaml
@@ -13,10 +13,7 @@ data:
         <h1 class="sr-only">JupyterHub home page</h1>
         {% if allow_named_servers %}
           <h2>Servers</h2>
-          <p>
-            You can launch a total of {{ named_server_limit_per_user + 1 }} server(s).
-          </p>
-          {% if named_server_limit_per_user == 0 %}
+          {% if user.admin %}
             <p>
               You can launch an unlimited number of servers (admin only). Regular users are limited to 1 server.
               When adding servers using the 'Add New Server' button, don't add any spaces or capital letters in the server name!
@@ -125,7 +122,7 @@ data:
                   </td>
                 </tr>
               {% endfor %}
-              {% if named_server_limit_per_user == 0 or named_spawners|length < named_server_limit_per_user %}
+              {% if user.admin or named_spawners|length < named_server_limit_per_user %}
                 <tr class="home-server-row add-server-row">
                   <td colspan="6">
                     <div class="input-group">
