remove unused sc, pv, and pvc's & clean up sc files

--- a/storage/storage_classes/wallace-jh-sc.yaml
+++ b/storage/storage_classes/wallace-jh-sc.yaml
@@ -1,4 +1,4 @@
-# marlo-sc.yaml
+# wallace-jh-sc.yaml
 ---
 apiVersion: storage.k8s.io/v1
 kind: StorageClass
@@ -16,13 +16,3 @@ mountOptions:
   - hard
   - proto=tcp
  # - nfsvers=4.1
-# apiVersion: storage.k8s.io/v1
-# kind: StorageClass
-# metadata:
-#   name: nfs-marlo-ssd
-# parameters:
-#   archiveOnDelete: "true"
-# provisioner: cluster.local/nfs-subdir-external-provisioner
-# reclaimPolicy: Delete
-# volumeBindingMode: Immediate
-# allowVolumeExpansion: true
