--- a/storage/volumes/wallace-references-mlnx-pv.yaml
+++ b/storage/volumes/wallace-references-mlnx-pv.yaml
@@ -9,7 +9,7 @@ spec:
     - ReadOnlyMany
   storageClassName: nfs-wallace-nvme
   nfs:
-    server: wallace.scripps.edu # non-mlnx
+    server: 192.168.1.3 #wallace.scripps.edu mlnx
     path: "/wallace_data_zfspool/references"
 
 
