--- a/storage/volumes/wallace-shared-mlnx-pv.yaml
+++ b/storage/volumes/wallace-shared-mlnx-pv.yaml
@@ -13,5 +13,5 @@ spec:
     - hard
     - proto=tcp
   nfs:
-    server: wallace.scripps.edu # non-mlnx
+    server: 192.168.1.3 #wallace.scripps.edu over mlnx
     path: /wallace_data_zfspool/brineylab_shared
