--- a/gpu_mcnulty_config.yaml
+++ b/gpu_mcnulty_config.yaml
@@ -64,13 +64,11 @@ singleuser:
   
   # defaults - in case pods get launched w/o specifying profile
   # i think this can only happen from the admin page
-  image:
-    name: brineylab/jupyterhub-datascience
-    tag: v2024-08-13
   profileList:
     - display_name: "data science"
       default: true
       kubespawner_override:
+        image: "brineylab/jupyterhub-datascience:v2024-08-13"
         node_selector:
           node_profile: "cpu"
 
