--- a/L40S_config.yaml
+++ b/L40S_config.yaml
@@ -50,7 +50,7 @@ singleuser:
     guarantee: 64G
 
   cpu:
-    limit: 128
+    limit: 256
     guarantee: 16
   
   # required for codeserver to launch
@@ -74,9 +74,8 @@ singleuser:
           node_profile: "L40S"
 
   storage:
-    # commented out below bc don't want to change default volume
-    # dynamic:
-    #   storageClass: nfs-marlo-ssd
+    dynamic:
+      storageClass: nfs-sparrow-jh-nvme
     capacity: 250Gi
 
     extraVolumes:
