--- a/auth/users.yaml
+++ b/auth/users.yaml
@@ -14,6 +14,7 @@ data:
       - simone
       - mshafiei
       - nitesh
+      - devgpu
     regular:
       - jonathan
       - pragati
@@ -31,3 +32,4 @@ data:
       - jmagura
       - tanand
       - civester
+      - devreg
