--- a/storage/storage_classes/sparrow-jh-sc.yaml
+++ b/storage/storage_classes/sparrow-jh-sc.yaml
@@ -8,7 +8,7 @@ metadata:
     storageclass.kubernetes.io/is-default-class: "true"
 provisioner: nfs.csi.k8s.io
 parameters:
-  server: sparrow.scripps.edu
+  server: 192.168.1.3 # sparrow.scripps.edu over mlnx
   share: /sparrow_data_zfspool/jupyterhub
 reclaimPolicy: Delete
 volumeBindingMode: Immediate
