update blackpearl config

--- a/blackpearl_config.yaml
+++ b/blackpearl_config.yaml
@@ -268,7 +268,7 @@ hub:
               "profile_options": {
                 **define_custom_images(deeplearning, datascience),
                 **define_gpu_types(["L40S"]),
-                **define_num_gpus([1, 2, 4, 8]),
+                **define_num_gpus([2, 4, 8]),
               },
             }
           ]
