users & readiness probe

--- a/auth/users.yaml
+++ b/auth/users.yaml
@@ -15,11 +15,11 @@ data:
       - simone
       - mshafiei
       - nitesh
+      - sean
     regular:
       - devreg
       - jonathan
       - pragati
-      - sean
       - morgan
       - benjamin
       - jyothi
@@ -34,3 +34,4 @@ data:
       - tanand
       - civester
       - tixu
+      - mgee
